# daily-report-assistant

./: .gitignore  README.md  architecture.md  quickstart.md  screenshot-analysis-flow.md
.workbuddy/memory/: 2026-07-11.md  MEMORY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/components/layout/: Sidebar.tsx
frontend/components/ui/: DisplayInfoCard.tsx  HeatmapChart.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: DisplayInfoCard.tsx  HeatmapChart.tsx  StatCard.tsx
frontend/src/hooks/: useAutoCapture.ts  useSyncProviderSettings.ts
frontend/src/pages/: AgentPage.tsx  AnalysisPage.tsx  AppRecordsPage.tsx  HeatmapPage.tsx  HistoryPage.tsx  ReportPage.tsx  SettingsPage.tsx  TimelinePage.tsx  TodayWorkPage.tsx
frontend/src/services/: aiProvider.ts  env.ts  lmStudioProvider.ts  ollamaProvider.ts  providerDetector.ts
frontend/src/stores/: reportStore.ts  settingsStore.ts
frontend/src/types/: ai.ts  index.ts
frontend/src/utils/: mockData.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/ai/: commands.rs  lmstudio.rs  mod.rs  ollama.rs  prompts.rs  provider.rs  scheduler.rs
src-tauri/src/privacy/: filter.rs
src-tauri/src/report/: commands.rs  generator.rs  mod.rs
src-tauri/src/screenshot/: commands.rs  content_hash.rs  manager.rs  mod.rs
src-tauri/src/security/: mod.rs  secure_buffer.rs
src-tauri/src/storage/: commands.rs  engine.rs  mod.rs
