[package]
name = "daily-report-assistant"
version = "0.1.0"
description = "日报 - 隐私优先的日报自动生成桌面应用"
authors = ["you"]
edition = "2021"

[package.metadata]


[lib]
name = "daily_report_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
xcap = "0.4"
image = "0.25"
img_hash = "3"
